# streaming_app_django

./: Procfile  README.md  pyproject.toml  requirements.txt
streaming_app/: Procfile  db.sqlite3
streaming_app/media/: admin.py  functions.py  models.py  serializer.py  urls.py  views.py
streaming_app/media/migrations/: 0001_initial.py  0002_remove_mediacatalog_no_visualizaciones_and_more.py  0003_alter_mediacatalog_genero.py  0004_rename_media_mediausuarios_media_id_and_more.py  0005_rename_media_id_mediausuarios_media_and_more.py  0006_alter_mediausuarioscount_avg_score.py
streaming_app/streaming_app/: asgi.py  settings.py  urls.py  wsgi.py
streaming_app/user/: views.py
streaming_app/user/migrations/: 0001_initial.py
